fixed spacing

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1220,6 +1220,7 @@ a {
 
 #bios-list {
   display: grid;
+  row-gap: 20px;
 
   @media (min-width: 500px) {
     column-gap: 20px;
@@ -1261,6 +1262,7 @@ a {
   font-size: 20px;
 }
 .bio-header img {
+  display: block;
   aspect-ratio: 1;
   max-width: 100%;
   height: auto;
@@ -1297,6 +1299,10 @@ a {
 .new-title.is-bio-list {
   font-size: clamp(1rem, 2vw, 1.5rem) !important;
   margin-top: .25em;
+}
+.bio-position {
+  line-height: 1.4;
+  margin-bottom: .6em;
 }
 
 .menu-link {
